Fix missing borders around input fields

--- a/src/sass/_input.sass
+++ b/src/sass/_input.sass
@@ -32,3 +32,8 @@ $input-bottom-margin: 8px
     display: inline
     width: unset
     margin-right: 4px
+
+.input-text
+  &__input
+    border: 1px solid #ddd
+    border-radius: .25rem
